changes for docker build

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     bgColor="black" name="'M1'">
   </ngx-avatars> -->
 
-  <ngx-avatars [size]="header_config.size!" class="mt-1 px-2" [initialsSize]="header_config.initialsSize!"
+  <!-- <ngx-avatars [size]="header_config.size!" class="mt-1 px-2" [initialsSize]="header_config.initialsSize!"
   [src]="header_config.src" [cornerRadius]="header_config.cornerRadius!"
   [bgColor]="header_config.bgColor" [name]="header_config.name" [round]="header_config.round!">
   </ngx-avatars>
@@ -17,7 +17,7 @@
   <ngx-avatars [size]="header_config.size!" class="mt-1 px-2" [initialsSize]="header_config.initialsSize!"
   [src]="header_config.src" [cornerRadius]="header_config.cornerRadius!"
   [bgColor]="header_config.bgColor" [name]="header_config.name" [round]="header_config.round!">
-  </ngx-avatars>
+  </ngx-avatars> -->
 </div>
 <!-- 
 <ngx-avatar [size]="60" class="mt-1 px-2" initialsSize=2 [src]="context?.data?.customer_logo" [round]="false"
