--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column align-items-center justify-content-center">
-  <img src={{configOptions?.image_url}} width={{configOptions?.width}} height={{configOptions?.height}} />
+  <img src={{header_config?.image_url}} width={{header_config?.width}} height={{header_config?.height}} />
   <div class="d-flex flex-column">
-    <h4 class="m-2 header-text">Powered by MeasureOne</h4>
+    <h4 class="m-2 header-text">{{header_config?.subtitle}}</h4>
   </div>
 </div>
