M1P-7668 image_url renamed to logo_url

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-column align-items-center justify-content-center">
-  <img src={{header_config?.image_url}} width={{header_config?.width}} height={{header_config?.height}} />
+  <img src={{header_config?.logo_url}} width={{header_config?.width}} height={{header_config?.height}} />
   <div class="d-flex flex-column">
     <h4 class="m-2 header-text">{{header_config?.subtitle}}</h4>
   </div>
