--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column align-items-center justify-content-center">
   <img src={{header_config?.logo_url}} width={{header_config?.width}} height={{header_config?.height}} />
   <div class="d-flex flex-column">
-    <h4 class="m-2 header-text">{{header_config?.subtitle}}</h4>
+    <p class="m-2 header-text">{{header_config?.subtitle}}</p>
   </div>
 </div>
