--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,7 @@
 @import "../../node_modules/bootstrap/scss/bootstrap-grid.scss";
 
 .header-text {
-    font-family: "Open Sans", sans-serif;
-    color: #141414;
+    font-family: var(--font_family);
+    font-size: var(--font_size);
+    color: var(--subtitle_color);
 }
