--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,18 @@
+
 <div class="d-flex flex-column align-items-center justify-content-center">
-  <img src={{header_config?.logo_url}} width={{header_config?.width}} height={{header_config?.height}} />
+
+   <img #k_image src="assets/blank_image.svg" width={{header_config?.width}} height={{header_config?.height}}
+    />
+<!--
+  <img src={{header_config?.logo_url}} width={{header_config?.width}} height={{header_config?.height}}
+    onload="javascript:document.getElementById('k_image').remove(); " /> -->
+
+
+<img src={{header_config?.logo_url}} width={{header_config?.width}} height={{header_config?.height}}
+(load)="dosomething()" />
+
   <div class="d-flex flex-column">
     <p class="m-2 header-text">{{header_config?.subtitle}}</p>
   </div>
 </div>
+
