--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <img #original_image style="display: none;" src={{header_config?.logo_url}} width={{header_config?.width}}
     height={{header_config?.height}} (load)="loadMainImage()" />
 
-  <div class="d-flex flex-column">
-    <p class="m-2 header-text">{{header_config?.subtitle}}</p>
+  <div *ngIf="header_config?.subtitle" class="d-flex flex-column">
+    <p class="mb-0 header-text">{{header_config.subtitle}}</p>
   </div>
 </div>
